--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               ASU Physics PHY 494
 tagline:             'Computational Methods in Physics'
 description:         ''
 url:                 'http://asu-compmethodsphysics-phy494.github.io/ASU-PHY494/'
-baseurl:             'http://asu-compmethodsphysics-phy494.github.io/ASU-PHY494/'
+baseurl:             '/ASU-PHY494'
 paginate:            5
 
 # About/contact
