--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ relative_permalinks: true
 title:               ASU Physics PHY 494
 tagline:             'Computational Methods in Physics'
 description:         ''
-url:                 'http://asu-compmethodsphysics-phy494.github.io/ASU-PHY494'
+url:                 'http://asu-compmethodsphysics-phy494.github.io'
 baseurl:             '/ASU-PHY494'
 paginate:            5
 
