fixed links to data and figs dir

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,11 @@ author:
 # Custom vars
 version:             'Fall 2016'
 
+
+# use as {{site.baseurl}}/{[site.data}}
+data:                "public/data"
+figs:                "public/figs"
+
 course:
  url:                http://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics
 
