--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,10 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
+
+# Since Feb 1 and Jekyll 3.0, relative_permalinks do not work anymore
+# https://github.com/blog/2100-github-pages-now-faster-and-simpler-with-jekyll-3-0
+### relative_permalinks: true
 
 # Setup
 title:               'Computational Methods in Physics'
@@ -35,19 +38,16 @@ course:
  url:                http://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics
 
 
+
 #--------------------------------------------------------------------------------
+# Standard Software Carpentry settings - only included what might be needed
 #--------------------------------------------------------------------------------
-# Standard Software Carpentry settings - should not need to be modified.
-#--------------------------------------------------------------------------------
-swc_blog        : "http://software-carpentry.org/feed.xml"
-swc_contact     : "admin@software-carpentry.org"
 swc_files       : "http://files.software-carpentry.org"
 swc_github      : "http://github.com/swcarpentry"
 swc_githubio    : "http://swcarpentry.github.io/"
 swc_installer   : "http://files.software-carpentry.org/SWCarpentryInstaller.exe"
 swc_site        : "http://software-carpentry.org"
-swc_twitter     : "http://twitter.com/swcarpentry"
-swc_vm          : "https://docs.google.com/uc?id=0B4Kr6DYkzkQtSTZLQzF4aVB4NDQ&export=download"
+
 #--------------------------------------------------------------------------------
 # Settings for Jekyll - should not need to be modified.
 #--------------------------------------------------------------------------------
