--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,8 @@ course:
 
 
 #--------------------------------------------------------------------------------
-# Standard Software Carpentry settings - only included what might be needed
+# Standard Software Carpentry settings - only included what is be needed
 #--------------------------------------------------------------------------------
-swc_files       : "http://files.software-carpentry.org"
-swc_github      : "http://github.com/swcarpentry"
-swc_githubio    : "http://swcarpentry.github.io/"
 swc_installer   : "http://files.software-carpentry.org/SWCarpentryInstaller.exe"
 swc_site        : "http://software-carpentry.org"
 
