--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   email:             oliver.beckstein@asu.edu
 
 # Custom vars
-version:             'Fall 2016'
+version:             'Spring 2016'
 
 # see https://help.github.com/articles/adding-jekyll-plugins-to-a-github-pages-site/
 gems:
