--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,14 @@ gems:
   - jekyll-mentions
   - jekyll-sitemap
   - jekyll-feed
+  - jekyll-paginate
 
 # use as {{site.baseurl}}/{{site.data}}
 data:                "public/data"
 figs:                "public/figs"
 lectures:            "public/lectures"
 docs:                "public/docs"
+siteresources:           "public/resources"
 
 course:
  url:                http://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics
