use SSL for link to course web page

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title:               'Computational Methods in Physics'
 tagline:             'ASU Physics PHY 494'
 description:         > 
                      A <a
-                     href="http://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics">class
+                     href="https://becksteinlab.physics.asu.edu/learning/76/phy494-computational-physics">class
                      at Arizona State University</a> that teaches
                      students how to use the computer as a tool to
                      solve problems in physics
