--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   email:             oliver.beckstein@asu.edu
 
 # Custom vars
-version:             'Spring 2020'
+version:             'Spring 2021'
 
 # see https://help.github.com/articles/adding-jekyll-plugins-to-a-github-pages-site/
 gems:
@@ -50,11 +50,11 @@ resources:
  url:                https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources
  fileurl:            https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-resources/blob/master
 
-assignments:
- name:               ASU-CompMethodsPhysics-PHY494/PHY494-assignments-skeleton
- shortname:          PHY494-assignments
- url:                https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-assignments-skeleton
- fileurl:            https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-assignments-skeleton/blob/master
+# assignments:
+#  name:               ASU-CompMethodsPhysics-PHY494/PHY494-assignments-skeleton
+#  shortname:          PHY494-assignments
+#  url:                https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-assignments-skeleton
+#  fileurl:            https://github.com/ASU-CompMethodsPhysics-PHY494/PHY494-assignments-skeleton/blob/master
  
 
 org:
